updated css linking as css was not loading

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
 
     <title>Frontend Mentor | Sunnyside agency landing page</title>
-    <link rel="stylesheet" href="/design/style.css" />
+    <link rel="stylesheet" href="design/style.css" />
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
