updated file path system for working images and css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
 
     <title>Frontend Mentor | Sunnyside agency landing page</title>
-    <link rel="stylesheet" href="/design/style.css" />
+    <link rel="stylesheet" href="design/style.css" />
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
@@ -48,7 +48,7 @@
       </div>
       <h1>We are creatives</h1>
       <div class="arrow-div">
-        <img src="/images/icon-arrow-down.svg" alt="down arrow" />
+        <img src="images/icon-arrow-down.svg" alt="down arrow" />
       </div>
     </nav>
     <main>
@@ -153,7 +153,10 @@
       <span>About</span>
       <span>Services</span>
       <span>Projects</span>
-      <p><i class="fab fa-facebook-f"></i><i class="fab fa-twitter"></i><i class="fab fa-instagram"></i><i class="fab fa-pinterest"></i></p>
+      <p>
+        <i class="fab fa-facebook-f"></i><i class="fab fa-twitter"></i
+        ><i class="fab fa-instagram"></i><i class="fab fa-pinterest"></i>
+      </p>
     </footer>
 
     <div class="attribution">
